# The-20-Games-Challenge-SDL3

./: .gitignore  README.md  pack_project.py
01_Pong/: Ball.cpp  Ball.hpp  CMakeLists.txt  Constants.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  SoundManager.cpp  build.ps1
02_Breakout/: Ball.cpp  Ball.hpp  CMakeLists.txt  Constants.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  SoundManager.hpp  build.ps1  main.cpp
